// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`duplicate element on move when ALT is clicked rectangle 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 50,
  "id": "id0_copy",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "seed": 401146281,
  "strokeColor": "#000000",
  "strokeSharpness": "sharp",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 4,
  "versionNonce": 2019559783,
  "width": 30,
  "x": 30,
  "y": 20,
}
`;

exports[`duplicate element on move when ALT is clicked rectangle 2`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 50,
  "id": "id0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "seed": 337897,
  "strokeColor": "#000000",
  "strokeSharpness": "sharp",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 4,
  "versionNonce": 1150084233,
  "width": 30,
  "x": -10,
  "y": 60,
}
`;

exports[`move element rectangle 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 50,
  "id": "id0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "seed": 337897,
  "strokeColor": "#000000",
  "strokeSharpness": "sharp",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 3,
  "versionNonce": 453191,
  "width": 30,
  "x": 0,
  "y": 40,
}
`;

exports[`move element rectangles with binding arrow 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": Array [
    Object {
      "id": "id2",
      "type": "arrow",
    },
  ],
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 100,
  "id": "id0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "seed": 337897,
  "strokeColor": "#000000",
  "strokeSharpness": "sharp",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 3,
  "versionNonce": 1014066025,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`move element rectangles with binding arrow 2`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": Array [
    Object {
      "id": "id2",
      "type": "arrow",
    },
  ],
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 300,
  "id": "id1",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "seed": 449462985,
  "strokeColor": "#000000",
  "strokeSharpness": "sharp",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 6,
  "versionNonce": 1723083209,
  "width": 300,
  "x": 201,
  "y": 2,
}
`;

exports[`move element rectangles with binding arrow 3`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "endArrowhead": null,
  "endBinding": Object {
    "elementId": "id1",
    "focus": -0.46666666666666673,
    "gap": 10,
  },
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 81.48231043525051,
  "id": "id2",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": Array [
    Array [
      0,
      0,
    ],
    Array [
      81,
      81.48231043525051,
    ],
  ],
  "roughness": 1,
  "seed": 401146281,
  "startArrowhead": null,
  "startBinding": Object {
    "elementId": "id0",
    "focus": -0.6000000000000001,
    "gap": 10,
  },
  "strokeColor": "#000000",
  "strokeSharpness": "round",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "line",
  "updated": 1,
  "version": 11,
  "versionNonce": 1006504105,
  "width": 81,
  "x": 110,
  "y": 49.981789081137734,
}
`;
